# game-arena

./: .gitignore  CMakeLists.txt  Makefile  todo.md
data/shaders/: colored.fs  mesh.fs  polygon.vs  sprite.fs  sprite.vs  terrain.vs  textured.fs
data/sprites/: placeholder1.kra
data/spritesheets/: spritesheet1.kra
include/data_structures/: buffer.h  heap.h
include/game/: animation.h  camera.h  collision.h  components.h  entity.h  entity_builder.h  game.h  system.h  systems.h  terrain.h  world_builder.h
include/render/: collision_renderer.h  mesh_renderer.h  polygon_renderer.h  renderer.h  shader.h  shaders.h  sprite_renderer.h  terrain_renderer.h  texture.h  textures.h  vertex.h
include/setup/: animation_config.h  animation_id.h  entity_builder.h  resources.h  setup_renderer.h  setup_textures.h  sprite_config.h  sprite_id.h  world_builder.h
include/window/: clock.h  fps_counter.h  input.h  keys.h  window.h
include/world/: camera.h  components.h  entity.h  entity_builder.h  game.h  systems.h  world.h  world_builder.h  world_loader.h
src/: main.cpp
src/game/: animation.cpp  camera.cpp  collision.cpp  entity.cpp  entity_builder.cpp  game.cpp  systems.cpp  world_builder.cpp
src/game/system/: animation.cpp  collision.cpp  collision_physics.cpp  enemy.cpp  enemy_spawner.cpp  gun.cpp  gunshot.cpp  occlusion_polygon.cpp  physics.cpp  player.cpp  render_base.cpp  render_gun_ray.cpp  render_polygon.cpp  render_sprite.cpp  sprite.cpp
src/game/systems/: collision.cpp  enemy.cpp  enemy_spawner.cpp  gunshot.cpp  physics.cpp  player.cpp  render_base.cpp  render_gun_ray.cpp
src/render/: collision_renderer.cpp  load_shaders.cpp  mesh_renderer.cpp  polygon_renderer.cpp  renderer.cpp  shader.cpp  shaders.cpp  sprite_renderer.cpp  terrain_renderer.cpp  texture.cpp  textures.cpp  vertex.cpp
src/setup/: animation_config.cpp  entity_builder.cpp  setup_renderer.cpp  setup_textures.cpp  sprite_config.cpp  world_builder.cpp
src/window/: clock.cpp  fps_counter.cpp  input.cpp  window.cpp
src/world/: world.cpp  world_loader.cpp
test/: CMakeLists.txt  heap.cpp
